--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <header>
     <nav aria-label="Hauptnavigation">
       <a href="index.html">
-        <img src="/Assets/Me.jpeg" alt="Avatar-Bild von Patrick" title="Avatar-Bild von Patrick" width="100">
+        <img src="/Assets/Logo.png" alt="Logo von 4 Years in China" title="4 Years in China" width="100">
       </a>
       <ul>
         <li><a href="/Essen_Blog-Seite.html">Essen</a></li>
