--- a/Inspiration_Galerie.html
+++ b/Inspiration_Galerie.html
@@ -6,23 +6,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inspiration</title>
     <link rel="stylesheet" href="styles.css">
+    <script src="script.js"></script>
 </head>
 
 <body>
 
     <!-- Header mit Navigation -->
     <header>
-        <nav aria-label="Hauptnavigation">
-            <a href="index.html">
-                <img src="/Assets/Logo.png" alt="Logo von 4 Years in China" title="4 Years in China" width="100">
+        <header>
+            <nav aria-label="Hauptnavigation">
+              <a href="index.html" class="logo">
+                  <img src="/Assets/Logo.png" alt="Logo von 4 Years in China" title="4 Years in China" width="100">
               </a>
-            <ul>
-                <li><a href="/Essen_Blog-Seite.html">Essen</a></li>
-                <li><a href="/Reisen_Blog-Seite.html">Reisen</a></li>
-                <li><a href="/Inspiration_Galerie.html">Inspiration</a></li>
-                <li><a href="/Kontakt.html">Kontakt</a></li>
-            </ul>
-        </nav>
+          
+              <!-- Burger-Menü Button -->
+              <div class="burger-menu">
+                  <div></div>
+                  <div></div>
+                  <div></div>
+              </div>
+          
+              <ul class="nav-links">
+                  <li><a href="/Essen_Blog-Seite.html">Essen</a></li>
+                  <li><a href="/Reisen_Blog-Seite.html">Reisen</a></li>
+                  <li><a href="/Inspiration_Galerie.html">Inspiration</a></li>
+                  <li><a href="/Kontakt.html">Kontakt</a></li>
+              </ul>
+          </nav>
         <div class="page-title">
             <h1>Inspiration</h1>
             <p>Lass dich in der Galerie inspirieren</p>
