--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>4 Years in China</title>
   <link rel="stylesheet" href="styles.css">
+  <script src="script.js"></script>
 </head>
 
 <body>
@@ -13,16 +14,24 @@
   <!-- Header mit Navigation -->
   <header>
     <nav aria-label="Hauptnavigation">
-      <a href="index.html">
-        <img src="/Assets/Logo.png" alt="Logo von 4 Years in China" title="4 Years in China" width="100">
+      <a href="index.html" class="logo">
+          <img src="/Assets/Logo.png" alt="Logo von 4 Years in China" title="4 Years in China" width="100">
       </a>
-      <ul>
-        <li><a href="/Essen_Blog-Seite.html">Essen</a></li>
-        <li><a href="/Reisen_Blog-Seite.html">Reisen</a></li>
-        <li><a href="/Inspiration_Galerie.html">Inspiration</a></li>
-        <li><a href="/Kontakt.html">Kontakt</a></li>
+  
+      <!-- Burger-Menü Button -->
+      <div class="burger-menu">
+          <div></div>
+          <div></div>
+          <div></div>
+      </div>
+  
+      <ul class="nav-links">
+          <li><a href="/Essen_Blog-Seite.html">Essen</a></li>
+          <li><a href="/Reisen_Blog-Seite.html">Reisen</a></li>
+          <li><a href="/Inspiration_Galerie.html">Inspiration</a></li>
+          <li><a href="/Kontakt.html">Kontakt</a></li>
       </ul>
-    </nav>
+  </nav>
     <div class="hero">
       <img src="/Assets/Heroimage_China.jpeg" alt="Hero-Bild von China mit Stadtansicht" title="Hero-Bild China">
       <div class="hero-text">
