feat(accessibility): improve text contrast and size, adjust tile layout

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
     <!-- Über mich -->
     <section class="about-me">
-      <img src="/Assets/Me.jpeg" alt="Portraitfoto von Patrick" title="Portraitfoto von Patrick">
+      <img src="/Assets/Me.jpeg" alt="Portraitfoto von Patrick" title="EIn Foto von Patrick">
       <div class="about-me-text">
           <h2>Hi, ich bin Patrick</h2>
           <p>Von 2018 bis 2022 habe ich als Expat in Shanghai gelebt. Meine Leidenschaft ist das Reisen und natürlich Essen!
