feat(inspiration): add introductory text for image gallery

--- a/index.html
+++ b/index.html
@@ -95,6 +95,23 @@
       </div>
     </section>
 
+        <!-- Inspiration -->
+        <section class="content-section-startpage">
+          <div class="content-image-startpage">
+              <img src="/Assets/Shanghai-BBQ.jpeg"
+                   alt="Teller mit gegrillten Fleischspießen, Garnelen und Beilagen auf einem rustikalen Holztisch"
+                   title="Shanghai BBQ mit gegrilltem Fleisch, Garnelen und Kichererbsendipp">
+          </div>
+          <div class="content-text-startpage">
+              <h2>Bilder sagen mehr als Worte. Lass dich inspirieren.</h2>
+              <p>Diese Galerie fängt Momente, Farben und Stimmungen aus vier Jahren in China ein – von belebten Straßenmärkten bis zu stillen Tempelhöfen, von der Dynamik der Metropolen bis zur Ruhe der Natur. 
+                Lass dich treiben, entdecke neue Perspektiven und finde deine eigene Inspiration in diesen visuellen Eindrücken.</p>
+              <a href="/Essen_Blog-Seite.html">
+                  <button type="button">Inspiration</button>
+              </a>
+          </div>
+        </section>
+
   </main>
 
   <!-- Footer -->
