refactor: clean up burger menu markup and remove redundant header tags

--- a/Essen_Blog-Seite.html
+++ b/Essen_Blog-Seite.html
@@ -13,26 +13,25 @@
 
     <!-- Header mit Navigation -->
     <header>
-        <header>
-            <nav aria-label="Hauptnavigation">
-              <a href="index.html" class="logo">
-                  <img src="/Assets/Logo.png" alt="Logo von 4 Years in China" title="4 Years in China" width="100">
-              </a>
-          
-              <!-- Burger-Menü Button -->
-              <div class="burger-menu">
-                  <div></div>
-                  <div></div>
-                  <div></div>
-              </div>
-          
-              <ul class="nav-links">
-                  <li><a href="/Essen_Blog-Seite.html">Essen</a></li>
-                  <li><a href="/Reisen_Blog-Seite.html">Reisen</a></li>
-                  <li><a href="/Inspiration_Galerie.html">Inspiration</a></li>
-                  <li><a href="/Kontakt.html">Kontakt</a></li>
-              </ul>
-          </nav>
+        <nav aria-label="Hauptnavigation">
+            <a href="index.html" class="logo">
+                <img src="/Assets/Logo.png" alt="Logo von 4 Years in China" title="4 Years in China" width="100">
+            </a>
+
+            <!-- Burger-Menü Button -->
+            <div class="burger-menu">
+                <div class="bar"></div>
+                <div class="bar"></div>
+                <div class="bar"></div>
+            </div>
+
+            <ul class="nav-links">
+                <li><a href="/Essen_Blog-Seite.html">Essen</a></li>
+                <li><a href="/Reisen_Blog-Seite.html">Reisen</a></li>
+                <li><a href="/Inspiration_Galerie.html">Inspiration</a></li>
+                <li><a href="/Kontakt.html">Kontakt</a></li>
+            </ul>
+        </nav>
         <div class="page-title">
             <h1>Essen</h1>
             <p>Essen macht glücklich</p>
