--- a/index.html
+++ b/index.html
@@ -15,28 +15,28 @@
   <header>
     <nav aria-label="Hauptnavigation">
       <a href="index.html" class="logo">
-          <img src="/Assets/Logo.png" alt="Logo von 4 Years in China" title="4 Years in China" width="100">
+        <img src="/Assets/Logo.png" alt="Logo von 4 Years in China" title="4 Years in China" width="100">
       </a>
-  
+
       <!-- Burger-Menü Button -->
       <div class="burger-menu">
-          <div></div>
-          <div></div>
-          <div></div>
-      </div>
-  
+        <div class="bar"></div>
+        <div class="bar"></div>
+        <div class="bar"></div>
+    </div>
+
       <ul class="nav-links">
-          <li><a href="/Essen_Blog-Seite.html">Essen</a></li>
-          <li><a href="/Reisen_Blog-Seite.html">Reisen</a></li>
-          <li><a href="/Inspiration_Galerie.html">Inspiration</a></li>
-          <li><a href="/Kontakt.html">Kontakt</a></li>
+        <li><a href="/Essen_Blog-Seite.html">Essen</a></li>
+        <li><a href="/Reisen_Blog-Seite.html">Reisen</a></li>
+        <li><a href="/Inspiration_Galerie.html">Inspiration</a></li>
+        <li><a href="/Kontakt.html">Kontakt</a></li>
       </ul>
-  </nav>
+    </nav>
     <div class="hero">
       <img src="/Assets/Heroimage_China.jpeg" alt="Hero-Bild von China mit Stadtansicht" title="Hero-Bild China">
       <div class="hero-text">
-          <h1>4 Years in China</h1>
-          <p>Die schönsten Reiseziele und das leckerste Essen</p>
+        <h1>4 Years in China</h1>
+        <p>Die schönsten Reiseziele und das leckerste Essen</p>
       </div>
     </div>
   </header>
@@ -48,69 +48,71 @@
     <section class="about-me">
       <img src="/Assets/Me.jpeg" alt="Portraitfoto von Patrick" title="EIn Foto von Patrick">
       <div class="about-me-text">
-          <h2>Hi, ich bin Patrick</h2>
-          <p>Von 2018 bis 2022 habe ich als Expat in Shanghai gelebt. Meine Leidenschaft ist das Reisen und natürlich Essen!
-              Ich liebe es, in einem Land herumzureisen, neue Leute kennenzulernen und neue Gerichte zu probieren. 
-              Auf meiner Website zeige ich dir die schönsten Reiseziele und das beste Essen, das du dort finden kannst. 
-              Lass dich inspirieren!</p>
-          <a href="Kontakt.html">
-              <button type="button">Kontakt</button>
-          </a>
+        <h2>Hi, ich bin Patrick</h2>
+        <p>Von 2018 bis 2022 habe ich als Expat in Shanghai gelebt. Meine Leidenschaft ist das Reisen und natürlich
+          Essen!
+          Ich liebe es, in einem Land herumzureisen, neue Leute kennenzulernen und neue Gerichte zu probieren.
+          Auf meiner Website zeige ich dir die schönsten Reiseziele und das beste Essen, das du dort finden kannst.
+          Lass dich inspirieren!</p>
+        <a href="Kontakt.html">
+          <button type="button">Kontakt</button>
+        </a>
       </div>
     </section>
 
     <!-- Reisen -->
     <section class="content-section-startpage">
       <div class="content-image-startpage">
-          <img src="/Assets/Suzhou_Mall.jpeg" 
-               alt="Sonnenuntergang über einer Einkaufsstraße mit hohen Gebäuden" 
-               title="Sonnenuntergang über Suzhou">
+        <img src="/Assets/Suzhou_Mall.jpeg" alt="Sonnenuntergang über einer Einkaufsstraße mit hohen Gebäuden"
+          title="Sonnenuntergang über Suzhou">
       </div>
       <div class="content-text-startpage">
-          <h2>Die schönsten Ecken in China und das Beste drumherum</h2>
-          <p>Shanghai selbst bietet schon allerhand für Entdecker, aber China ist groß – sehr groß. Die verschiedenen
-              Provinzen unterscheiden sich landschaftlich wie kulturell. Und von Shanghai aus ist man innerhalb weniger Stunden
-              in Japan, Vietnam, Korea, und und und...</p>
-          <a href="/Reisen_Blog-Seite.html">
-              <button type="button">Alle Reiseziele</button>
-          </a>
+        <h2>Die schönsten Ecken in China und das Beste drumherum</h2>
+        <p>Shanghai selbst bietet schon allerhand für Entdecker, aber China ist groß – sehr groß. Die verschiedenen
+          Provinzen unterscheiden sich landschaftlich wie kulturell. Und von Shanghai aus ist man innerhalb weniger
+          Stunden
+          in Japan, Vietnam, Korea, und und und...</p>
+        <a href="/Reisen_Blog-Seite.html">
+          <button type="button">Alle Reiseziele</button>
+        </a>
       </div>
     </section>
 
     <!-- Essen -->
     <section class="content-section-startpage">
       <div class="content-image-startpage">
-          <img src="/Assets/Essen.jpeg"
-               alt="Tisch mit drehbarer Glasplatte und verschiedenen chinesischen Gerichten"
-               title="Traditionelle chinesische Speisen auf einem großen Tisch">
+        <img src="/Assets/Essen.jpeg" alt="Tisch mit drehbarer Glasplatte und verschiedenen chinesischen Gerichten"
+          title="Traditionelle chinesische Speisen auf einem großen Tisch">
       </div>
       <div class="content-text-startpage">
-          <h2>Essen macht glücklich</h2>
-          <p>Von traditionellen Gerichten über Fast Food und Fusion-Food bis hin zu Fine-Dine aus aller Herren Länder. 24
-              Stunden, 7 Tage die Woche, geliefert oder im Restaurant. Asien bietet, was der Gaumen begehrt und das Herz
-              glücklich macht.</p>
-          <a href="/Essen_Blog-Seite.html">
-              <button type="button">Das beste Essen</button>
-          </a>
+        <h2>Essen macht glücklich</h2>
+        <p>Von traditionellen Gerichten über Fast Food und Fusion-Food bis hin zu Fine-Dine aus aller Herren Länder. 24
+          Stunden, 7 Tage die Woche, geliefert oder im Restaurant. Asien bietet, was der Gaumen begehrt und das Herz
+          glücklich macht.</p>
+        <a href="/Essen_Blog-Seite.html">
+          <button type="button">Das beste Essen</button>
+        </a>
       </div>
     </section>
 
-        <!-- Inspiration -->
-        <section class="content-section-startpage">
-          <div class="content-image-startpage">
-              <img src="/Assets/Shanghai-BBQ.jpeg"
-                   alt="Teller mit gegrillten Fleischspießen, Garnelen und Beilagen auf einem rustikalen Holztisch"
-                   title="Shanghai BBQ mit gegrilltem Fleisch, Garnelen und Kichererbsendipp">
-          </div>
-          <div class="content-text-startpage">
-              <h2>Bilder sagen mehr als Worte. Lass dich inspirieren.</h2>
-              <p>Diese Galerie fängt Momente, Farben und Stimmungen aus vier Jahren in China ein – von belebten Straßenmärkten bis zu stillen Tempelhöfen, von der Dynamik der Metropolen bis zur Ruhe der Natur. 
-                Lass dich treiben, entdecke neue Perspektiven und finde deine eigene Inspiration in diesen visuellen Eindrücken.</p>
-              <a href="/Essen_Blog-Seite.html">
-                  <button type="button">Inspiration</button>
-              </a>
-          </div>
-        </section>
+    <!-- Inspiration -->
+    <section class="content-section-startpage">
+      <div class="content-image-startpage">
+        <img src="/Assets/Shanghai-BBQ.jpeg"
+          alt="Teller mit gegrillten Fleischspießen, Garnelen und Beilagen auf einem rustikalen Holztisch"
+          title="Shanghai BBQ mit gegrilltem Fleisch, Garnelen und Kichererbsendipp">
+      </div>
+      <div class="content-text-startpage">
+        <h2>Bilder sagen mehr als Worte. Lass dich inspirieren.</h2>
+        <p>Diese Galerie fängt Momente, Farben und Stimmungen aus vier Jahren in China ein – von belebten Straßenmärkten
+          bis zu stillen Tempelhöfen, von der Dynamik der Metropolen bis zur Ruhe der Natur.
+          Lass dich treiben, entdecke neue Perspektiven und finde deine eigene Inspiration in diesen visuellen
+          Eindrücken.</p>
+        <a href="/Essen_Blog-Seite.html">
+          <button type="button">Inspiration</button>
+        </a>
+      </div>
+    </section>
 
   </main>
 
